# fast-paste

./: eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
script/: remove_white_background.js
src/: App.tsx  index.tsx  style.css  tray.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/shortcut/: mod.rs
src-tauri/tests/: test.rs
src/router/: index.tsx
src/views/: Main.tsx  Paste.tsx  Tip.tsx
